--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Tests
 
 on:
   push:
@@ -10,31 +10,30 @@ env:
 
 jobs:
   check:
-    name: Foundry project
+    name: Foundry Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
 
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
+      - uses: foundry-rs/foundry-toolchain@v1
 
-      - name: Show Forge version
+      - name: Forge version
         run: |
           forge --version
 
-      - name: Run Forge fmt
+      - name: Forge format
         run: |
           forge fmt --check
         id: fmt
 
-      - name: Run Forge build
+      - name: Forge build
         run: |
           forge build --sizes
         id: build
 
-      - name: Run Forge tests
+      - name: Forge test
         run: |
           forge test -vvv
         id: test
