--- a/foundry.toml
+++ b/foundry.toml
@@ -41,7 +41,7 @@ runs = 4096
 runs = 256
 
 [profile.checker.model_checker]
-contracts = { 'src/CPQD.sol' = ['CPQD'] }
+contracts = { 'src/Challenge1.sol' = ['TrabalhoERC20'] }
 engine = 'chc'
 timeout = 10_000
 targets = [
