fix(challenge2): missing swap1

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -61,5 +61,5 @@ jobs:
       - name: Forge test
         if: ${{ failure() }}
         run: |
-          forge test -vvvv
+          forge test -vvv
         id: test
