--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ out = 'out'
 libs = ['lib']
 fs_permissions = [{ access = "read", path = "src/"}]
 ffi = true
+no_match_coverage = "script"
 # for deploy
 optimizer = true
 optimizer-runs = 200
