feat(challenge2): ensure the input is valid
Use constants the always overflow if the input is wrong.

--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,7 @@ libs = ['lib']
 fs_permissions = [{ access = "read", path = "src/"}, { access = "read", path = "dist/"}]
 ffi = true
 no_match_coverage = "script"
+gas_limit = "18446744073709551615"
 # for deploy
 optimizer = true
 optimizer-runs = 20_000
